[package]
name = "minecraft-server-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minecraft_utilities = { git = "https://github.com/Shrecknt/minecraft-utilities.git" }
reqwest = "0.11.17"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
